@@ -1,6 +1,8 @@
 Revision history for Perl extension OrePAN2
 
 {{$NEXT}}
+    - Switch from Parse::CPAN::Packages to Parse::CPAN::Packages::Fast (GH#57)
+      (Olaf Alders)
 
 0.47 2018-11-02T20:09:44Z
     - Move t/Util.pm and modernize Travis config (GH#50) (Olaf Alders)
